manifests/service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
